<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">XmSync</string>
    <string name="password">Password</string>
    <string name="user">User</string>
    <string name="remote_ip">Remote IP</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="port">Port</string>
    <string name="signin">Sign In</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="touch">Touch Pad</string>
    <string name="explorer">File Explorer</string>
    <string name="desktop">Desktop</string>
    <string name="camera">WebCam</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_mouse">MouseActivity</string>
    <string name="title_activity_file_view">FileViewActivity</string>

</resources>