<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login"
    tools:context=".LoginActivity" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/user"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_up"
            android:hint="@string/user" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/text_center"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/remote_ip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/text_center"
            android:inputType="phone"
            android:hint="@string/remote_ip" />

        <EditText
            android:id="@+id/port"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_down"
            android:hint="@string/port" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout1"
        android:layout_alignRight="@+id/linearLayout1"
        android:layout_below="@+id/linearLayout1"
        android:layout_marginTop="30dp"
        android:background="@drawable/selector_button"
        android:text="@string/signin"
        android:textColor="@android:color/background_light"
        android:onClick="btnClickLogin"
         />

    <ImageView
        android:id="@+id/image_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayout1"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo" />

</RelativeLayout>